# proxima

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  QUICKSTART.md  README.md  package.json  pyrightconfig.json
apps/api/: README.md  pyproject.toml
apps/api/proxima_api/: acp.py  alpha_runtime.py  alpha_supervisor.py  app_settings.py  apprunner.py  artifact_registry.py  artifacts.py  auth_health.py  brand_extract.py  capabilities.py  cf_hostnames.py  chat_collaboration.py  codex_appserver.py  commands.py  db.py  design_scenes.py  event_hub.py  features.py  frontend_static.py  fsapi.py  goal_loop.py  graph.py  graph_advancers.py  graph_executor.py  higgsfield.py  image_providers.py  job_checkpoints.py  kinds.py  logging_config.py  main.py  media_settings.py  message_reviews.py  migrations.py  preview_proxy.py  profile_seed.py  project_areas.py  prompt_collaborations.py  provisioning.py  recommended_tools.py  repo_remote.py  (+25 more)
apps/api/scripts/: dev_server.py  seed_demo.py  serve.py  smoke_acl_api.py
apps/api/tests/: test_alpha.py  test_apprunner.py  test_artifact_registry.py  test_artifact_result_links.py  test_auth_health.py  test_boundaries.py  test_brainstorm_synthesis_race.py  test_brand_guide.py  test_capabilities.py  test_chat_send.py  test_codex_appserver.py  test_collaboration_race.py  test_commands.py  test_debug_logs_route.py  test_feature_flags.py  test_files_api.py  test_format_rpc_error.py  test_frontend_static.py  test_fsapi.py  test_graph.py  test_graph_executor.py  test_graph_routes.py  test_health.py  (+52 more)
(+272 files in other folders)
