[project]
name = "proxima-api"
version = "1.0.0"
description = "Proxima API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.32",
  "pyyaml>=6.0.2",
  "tomlkit>=0.13.3",
  "uvicorn>=0.30.0",
  "websockets>=16.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.15.0",
]

[tool.ruff.lint]
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
